--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,40 @@
   
   <body>
     
+    <button id="start">START</button>
+
   <div id="yt-wrap"><div id="ytplayer"></div></div>
 
-    <script>
-      // 2. This code loads the IFrame Player API code asynchronously.
-      var tag = document.createElement('script');
-      tag.src = "https://www.youtube.com/player_api";
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+  <script>
+    // 2. This code loads the IFrame Player API code asynchronously.
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/player_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
-      // 3. This function creates an <iframe> (and YouTube player)
-      // after the API code downloads.
-      var player;
-      function onYouTubePlayerAPIReady() {
-          player = new YT.Player('ytplayer', {
-              width: '100%',
-              height: '100%',
-              videoId: 'Qk_rFm4uYnY',
-              playerVars: {
-                  'autoplay': 1,
-                  'showinfo': 0,
-                  'autohide': 1,
-                  'loop': 1,
-                  'controls': 0,
-                  'modestbranding': 1,
-                  'vq': 'hd1080'
-              },
-              events: {
-                  'onReady': onPlayerReady,
-                  'onStateChange': onPlayerStateChange
-              }
-          });
-      }
+    // 3. This function creates an <iframe> (and YouTube player)
+    // after the API code downloads.
+    var player;
+    function onYouTubePlayerAPIReady() {
+        player = new YT.Player('ytplayer', {
+            width: '100%',
+            height: '100%',
+            videoId: 'Qk_rFm4uYnY',
+            playerVars: {
+                'autoplay': 1,
+                'showinfo': 0,
+                'autohide': 1,
+                'loop': 1,
+                'controls': 0,
+                'modestbranding': 1,
+                'vq': 'hd1080'
+            },
+            events: {
+                'onReady': onPlayerReady,
+                'onStateChange': onPlayerStateChange
+            }
+        });
+    }
 
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
@@ -57,6 +59,10 @@
       function stopVideo() {
           player.stopVideo();
       }
+
+      document.getElementById('start').addEventListener('click', function(){
+        player.playVideo();
+      })
     </script>
   </body>
 </html>
