--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <main>
 
       <header>
-        <div class="u-flex-box"><h2 class="c-box"><a href="/">Kilbi 2019©</a></h2></div>
+        <div class="u-flex-box"><h2 class="c-box"><a href="http://kilbi.badbonn.ch/" target="_blank">Kilbi 2019©</a></h2></div>
         <div class="u-flex-box"><h1 class="c-heading__main">Memory Unit <span>Archives</span></h1></div>
         <div class="u-flex-box"><h2 class="c-box c-box--invert js-live js-hide"><a href="https://youtu.be/Vdk_BZZ0x3k" target="_blank">•&nbsp;&nbsp;Live</a></h2></div>
       </header>
