--- a/src/index.html
+++ b/src/index.html
@@ -69,12 +69,12 @@
         player = new YT.Player('ytplayer', {
             width: '100%',
             height: '100%',
-            videoId: 'Vdk_BZZ0x3k',
+            videoId: 'Qk_rFm4uYnY',
             playerVars: {
                 'autoplay': 0,
                 'showinfo': 0,
                 'autohide': 1,
-                'loop': 0,
+                'loop': 1,
                 'controls': 0,
                 'modestbranding': 1
             },
